# unitree_mujoco

./: .gitignore  readme.md  start.sh  start.yaml
AI_support/: ARCHITECTURE.md  CHANGE_GUIDE.md  README.md  WORKFLOWS.md
agent/: config.yaml
agent/cpp/: CMakeLists.txt  build.sh  stand_go2.cpp
agent/cpp/a2/: README.md  build.sh
agent/cpp/b2/: README.md
agent/cpp/b2w/: README.md
agent/cpp/g1/: CMakeLists.txt  README.md  config.yaml  main.cpp
agent/cpp/g1/config/: common.yaml  fsm.yaml  policies.yaml
agent/cpp/g1/config/states/: passive.yaml  pd.yaml  stand.yaml  walk.yaml
agent/cpp/g1/config/states/run/: policy.yaml  state.yaml
agent/cpp/g1/config/states/stand/: policy.yaml  state.yaml
agent/cpp/g1/config/states/stand/policies/: 2026-06-06_14-38-35_motrix.onnx
agent/cpp/g1/config/states/walk/: policy.yaml  state.yaml
agent/cpp/g1/include/: FSM.hpp  agent.hpp  fsm.hpp  keyboard.hpp  policy.hpp  rl_controller.hpp  types.hpp
agent/cpp/g1/include/fsm/: fsm.hpp  passive_state.hpp  pd_state.hpp  rl_state.hpp
agent/cpp/g1/src/: FSM.cpp  agent.cpp  config.cpp  fsm.cpp  keyboard.cpp  policy.cpp
agent/cpp/g1/src/fsm/: fsm.cpp  passive_state.cpp  pd_state.cpp  rl_state.cpp
agent/cpp/go2/: README.md  main.cpp
agent/cpp/go2w/: README.md
agent/cpp/h1/: README.md
agent/cpp/h1_2/: README.md
agent/cpp/r1/: CMakeLists.txt  README.md  build.sh
agent/python/: build.sh  stand_go2.py
agent/ros2/: build.sh
simulate/: CMakeLists.txt  build.sh
simulate/src/: main.cc  unitree_sdk2_bridge.h
simulate/src/custom_ui/common/: custom_ui.cc  custom_ui.h
terrain_tool/: readme.md
unitree_robots/g1/: g1_23dof.xml  g1_29dof.xml
